Use Bing Directions API instead of Google
Google doesn't provide free access to travel duration
with traffic.

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "directions_api_key": "",
-  "origin": "8245+Boone+Blvd,+Vienna,+VA",
-  "destination": "1608+East-West+Highway+Silver+Spring,+MD"
+  "origin": "8245 Boone Blvd, Vienna, VA",
+  "destination": "1608 East-West Highway Silver Spring, MD"
 }
+
